config/network-policy/allow-metrics-traffic.yaml
# This NetworkPolicy allows ingress traffic
# with Pods running on namespaces labeled with 'metrics: enabled'. Only Pods on those
# namespaces are able to gather data from the metrics endpoint.
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  labels:
    app.kubernetes.io/name: aegis
    app.kubernetes.io/managed-by: kustomize
  name: allow-metrics-traffic
  namespace: system
spec:
  podSelector:
    matchLabels:
      control-plane: controller-manager
      app.kubernetes.io/name: aegis
  policyTypes:
  - Ingress
  ingress:
  # This allows ingress traffic from any namespace with the label metrics: enabled
  - from:
    - namespaceSelector:
        matchLabels:
          metrics: enabled # Only from namespaces with this label
    ports:
    - port: 8443
      protocol: TCP
